@@ -7,7 +7,7 @@
 
 static uint8 Font6x7[792] =
 {
-	6,  0,  0,  0,  0,  0,  0,  0,
+	6,  0,  0,  0,  0,  0,  0,  0,	// 0x20 - Spacebar
 	3, 64, 64, 64, 64, 64,  0, 64,
 	5, 80, 80, 80,  0,  0,  0,  0,
 	6, 80, 80,248, 80,248, 80, 80,
@@ -23,7 +23,7 @@ static uint8 Font6x7[792] =
 	5,  0,  0,  0,240,  0,  0,  0,
 	3,  0,  0,  0,  0,  0,  0, 64,
 	5, 16, 16, 32, 32, 32, 64, 64,
-	6,112,136,136,136,136,136,112, //0
+	6,112,136,136,136,136,136,112,	// 0x30 - 0
 	6, 32, 96, 32, 32, 32, 32, 32,
 	6,112,136,  8, 48, 64,128,248,
 	6,112,136,  8, 48,  8,136,112,
@@ -38,9 +38,9 @@ static uint8 Font6x7[792] =
 	4,  0, 32, 64,128, 64, 32,  0,
 	5,  0,  0,240,  0,240,  0,  0,
 	4,  0,128, 64, 32, 64,128,  0,
-	5,112,136,  8, 16, 32,  0, 32,
-	6,112,136,136,184,176,128,112,
-	6,112,136,136,248,136,136,136, //A
+	6,112,136,  8, 16, 32,  0, 32,	// 0x3F - ?
+	6,112,136,136,184,176,128,112,	// 0x40 - @
+	6,112,136,136,248,136,136,136,	// 0x41 - A
 	6,240,136,136,240,136,136,240,
 	6,112,136,128,128,128,136,112,
 	6,224,144,136,136,136,144,224,
@@ -72,7 +72,7 @@ static uint8 Font6x7[792] =
 	4, 64,160,  0,  0,  0,  0,  0,
 	6,  0,  0,  0,  0,  0,  0,248,
 	3,128, 64,  0,  0,  0,  0,  0,
-	5,  0,  0, 96, 16,112,144,112, //a
+	5,  0,  0, 96, 16,112,144,112,	// 0x61 - a
 	5,128,128,224,144,144,144,224,
 	5,  0,  0,112,128,128,128,112,
 	5, 16, 16,112,144,144,144,112,
